# ComfyUI-CaptionThis

./: README.md  README_CN.md  __init__.py  common.py  configuration_florence2.py  florence2_caption.py  janus_pro_caption.py  joy_caption.py  modeling_florence2.py  pyproject.toml  requirements.txt
janus/janusflow/models/: siglip_vit.py
workflows/: Florence2_Caption_Whole_Directory.json  Florence2_Describe_Image.json  JanusPro_Caption_Whole_Directory.json  JanusPro_Describe_Image.json
